k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-despacho-service
  namespace: ambulance-system
  labels:
    app: ms-despacho
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: fpm
    protocol: TCP
    name: http
  selector:
    app: ms-despacho
  sessionAffinity: None
  publishNotReadyAddresses: false
  ipFamilyPolicy: SingleStack
